apps/httpd-deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd
    type: workload
  name: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment: httpd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: httpd
        type: workload
    spec:
      containers:
      - image: registry.access.redhat.com/ubi9/httpd-24:1-325
        imagePullPolicy: Always
        name: httpd
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - name: htmlstuff
            mountPath: /var/www/html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: htmlstuff
          configMap:
            name: htmlstuff
            items:
              - key: index.html
                path: index.html
